--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips): \n",
-    "    print(list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips)))\n"
+    "    retur(list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips)))\n"
    ]
   },
   {
