--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):\n",
-    "    float(parsed_trips())\n",
+    "    trips = trips.int()\n",
     "    return"
    ]
   },
