--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):\n",
-    "    list(map(lambda trip: float(trip[])))\n",
+    "    list(map(lambda trip: float(trip.get())))\n",
     "    return"
    ]
   },
