--- a/index.ipynb
+++ b/index.ipynb
@@ -230,12 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-f889134134d3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-f889134134d3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    list(map(lambda trip: float(trip.get('pickup_latitude')) trips))\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def float_values(trips):\n",
-    "    list(map(lambda trip: float(trip.get('pickup_latitude') trips)))\n",
+    "    list(map(lambda trip: float(trip.get('pickup_latitude')) trips))\n",
     "    return"
    ]
   },
