Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    ],
    "source": [
     "def float_values(trips):\n",
-    "    list(map(lambda trip: float(trip['pickup_latitu']\n",
+    "    list(map(lambda trip: float(trip['pickup_latitude']), trips)\n",
     "    return"
    ]
   },
