Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,8 +235,8 @@
    "outputs": [],
    "source": [
     "def float_values(trips):\n",
-    "    list(map(lambda trip: float(trip['pickup_latitude']), trips))\n",
-    "    return"
+    "     return list(map(lambda trip: float(trip['pickup_latitude']), trips))\n",
+    "   "
    ]
   },
   {
@@ -257,8 +257,7 @@
     }
    ],
    "source": [
-    "cleaned_trips = float_values(parsed_trips)\n",
-    "print(cleaned_trips[0])"
+    "cleaned_trips = float_values(parsed_trips)\n"
    ]
   },
   {
