--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip: float(trip['pickup_latitude']), float(trip['pickup_longitude'], float) trips))\n",
+    "     return list(map(lambda trip: float(trip['pickup_latitude']), float(trip['pickup_longitude'], float(trip['trip_distance'])) trips))\n",
     "   "
    ]
   },
