--- a/index.ipynb
+++ b/index.ipynb
@@ -230,12 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-35-23c15a455724>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-23c15a455724>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip: float(trip['pickup_latitude']), float(trip['pickup_longitude'], float(trip['trip_distance'])) trips))\n",
+    "     return list(map(lambda trip: float(trip['pickup_latitude']), float(trip['pickup_longitude'], float(trip['trip_distance']), trips))\n",
     "   "
    ]
   },
