--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    ],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip: float(trip['pickup_latitude']) float(trip['pickup_longitude'] float(trip['trip_distance']), trips)))\n",
+    "     return list(map(lambda trip:{'pic' float(trip['pickup_latitude']) float(trip['pickup_longitude'] float(trip['trip_distance']), trips)))\n",
     "   "
    ]
   },
