Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,21 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-9f5a872df532>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-41-0a4f135e73cb>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-9f5a872df532>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: float(trip['pickup_latitude']) float(trip['pickup_longitude'] float(trip['trip_distance']), trips)))\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-0a4f135e73cb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip:{'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']), trips)\u001b[0m\n\u001b[0m                                                                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip:{'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_' float(trip['trip_distance']), trips)))\n",
+    "     return list(map(lambda trip:{'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']), trips)\n",
     "   "
    ]
   },
