Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    ],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip:{'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']), trips)\n",
+    "     return list(map(lambda trip: {'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']}), trips)\n",
     "   "
    ]
   },
