--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
    "source": [
     "def float_values(trips):\n",
     "     return list(map(lambda trip: {'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']},) trips)\n",
-    "   "
+    "   return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))"
    ]
   },
   {
