--- a/index.ipynb
+++ b/index.ipynb
@@ -230,22 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-42-bdcea3a9d15b>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-43-8161defc68e8>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-bdcea3a9d15b>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: {'pickup_latitude': float(trip['pickup_latitude']),'pickup_longitute': float(trip['pickup_longitude'], 'trip_distance': float(trip['trip_distance']},) trips)\u001b[0m\n\u001b[0m                                                                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-8161defc68e8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: {'pickup_latitude': trip['pickup_latitude'],'pickup_longitute': trip['pickup_longitude'], 'trip_distance': trip['trip_distance']},) trips)\u001b[0m\n\u001b[0m                                                                                                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def float_values(trips):\n",
     "     return list(map(lambda trip: {'pickup_latitude': trip['pickup_latitude'],'pickup_longitute': trip['pickup_longitude'], 'trip_distance': trip['trip_distance']},) trips)\n",
-    "     return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))"
+    "     "
    ]
   },
   {
