Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,21 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-43-8161defc68e8>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-44-e06347bf29b0>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-8161defc68e8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: {'pickup_latitude': trip['pickup_latitude'],'pickup_longitute': trip['pickup_longitude'], 'trip_distance': trip['trip_distance']},) trips)\u001b[0m\n\u001b[0m                                                                                                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-e06347bf29b0>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
     "def float_values(trips):\n",
-    "     return list(map(lambda trip: {'pickup_latitude': trip['pickup_latitude'],'pickup_longitute': trip['pickup_longitude'], 'trip_distance': trip['trip_distance']},) trips)\n",
+    "     return list(map(lambda trip: {'pickup_latitude': trip['pickup_latitude'],'pickup_longitute': trip['pickup_longitude'], 'trip_distance': trip['trip_distance']}, trips)\n",
     "     "
    ]
   },
