Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,16 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40.64499"
+       "{'pickup_latitude': '40.64499',\n",
+       " 'pickup_longitute': '-73.781149999999997',\n",
+       " 'trip_distance': '18.379999999999999'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
