Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "source": [
     "def location(trip):\n",
     "    x= [] \n",
-    "    "
+    "    trip.get('picup_latitude')"
    ]
   },
   {
