Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,8 @@
    "source": [
     "def location(trip):\n",
     "    x= [] \n",
-    "    trip.get('picup_latitude')"
+    "    y = trip.get('pickup_latitude')\n",
+    "    "
    ]
   },
   {
