Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,7 @@
     "def location(trip):\n",
     "    x= [] \n",
     "    y = trip.get('pickup_latitude')\n",
-    "    "
+    "    z = trip.get('pickup_lo')"
    ]
   },
   {
