Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,9 @@
     "def location(trip):\n",
     "    x= [] \n",
     "    y = trip.get('pickup_latitude')\n",
-    "    z = trip.get('pickup_longitude')"
+    "    z = trip.get('pickup_longitude')\n",
+    "    x.append(y)\n",
+    "    x.append"
    ]
   },
   {
