Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,8 @@
     "    y = trip.get('pickup_latitude')\n",
     "    z = trip.get('pickup_longitude')\n",
     "    x.append(y)\n",
-    "    x.append"
+    "    x.append(z)\n",
+    "    return "
    ]
   },
   {
