Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,14 +450,25 @@
     "    z = trip.get('pickup_longitude')\n",
     "    x.append(y)\n",
     "    x.append(z)\n",
-    "    return "
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40.64499, -73.78115]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_location = location(first_trip) # [40.64499, -73.78115]\n",
     "first_location # [40.64499, -73.78115]"
