--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_marker(location):\n",
+    "def to_marker(ln):\n",
     "    marker = folium.CircleMarker(location(), radius=10)"
    ]
   },
