--- a/index.ipynb
+++ b/index.ipynb
@@ -483,12 +483,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-58-253715a3dfb1>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-253715a3dfb1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return marker = folium.CircleMarker(location(ln), radius=10)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def to_marker(ln):\n",
-    "    marker = folium.CircleMarker(location(), radius=10)"
+    "    return marker = folium.CircleMarker(location(ln), radius=10)"
    ]
   },
   {
