Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,8 @@
    ],
    "source": [
     "def to_marker(ln):\n",
-    "    return marker = folium.CircleMarker(location(ln), radius=10)"
+    "     marker = folium.CircleMarker(location(ln), radius=10)\n",
+    "        return"
    ]
   },
   {
