--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_marker(ln):\n",
+    "def to_marker(l):\n",
     "    marker = folium.CircleMarker(location(ln), radius=10)\n",
     "    return marker"
    ]
