Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,12 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_marker(l):\n",
-    "    marker = folium.CircleMarker(location(ln), radius=10)\n",
+    "def to_marker(location):\n",
+    "    marker = folium.CircleMarker(location, radius=10)\n",
     "    return marker"
    ]
   },
