Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "source": [
     "def location(trip):\n",
     "    x= [] \n",
-    "    y = trip.get('pickup_latitude')\n",
+    "    y = trip[]'pickup_latitude')\n",
     "    z = trip.get('pickup_longitude')\n",
     "    x.append(y)\n",
     "    x.append(z)\n",
