--- a/index.ipynb
+++ b/index.ipynb
@@ -440,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
     "    x= [] \n",
-    "    y = trip[]'pickup_latitude')\n",
-    "    z = trip.get('pickup_longitude')\n",
+    "    y = trip['pickup_latitude']\n",
+    "    z = trip['pickup_longitude']\n",
     "    x.append(y)\n",
     "    x.append(z)\n",
     "    return x"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "[40.64499, -73.78115]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
