--- a/index.ipynb
+++ b/index.ipynb
@@ -483,12 +483,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker = folium.CircleMarker(location, radius)\n",
+    "    marker = folium.CircleMarker(location, radius = 10)\n",
     "    return marker"
    ]
   },
