Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,13 +483,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
-    "    marker = folium.CircleMarker(location, radius = 10)\n",
-    "    return marker"
+    "    return folium.CircleMarker(location, radius = 10)\n",
+    "    "
    ]
   },
   {
