Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,8 +446,7 @@
    "source": [
     "def location(trip):\n",
     "    x= [] \n",
-    "    y = trip['pickup_latitude']\n",
-    "    z = trip['pickup_longitude']\n",
+    "    y = [trip['pickup_latitude'], trip['pickup_longitude']]\n",
     "    x.append(y)\n",
     "    x.append(z)\n",
     "    return x"
