Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -445,11 +445,8 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    x= [] \n",
-    "    y = [trip['pickup_latitude'], trip['pickup_longitude']]\n",
-    "    x.append(y)\n",
-    "    x.append(z)\n",
-    "    return x"
+    "    return [trip['pickup_latitude'], trip['pickup_longitude']]\n",
+    "   "
    ]
   },
   {
