Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,9 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    y = trip['pickup_latitude'] trip['pickup_longitude']]\n",
+    "    x = []\n",
+    "    y = trip['pickup_latitude']\n",
+    "    z = trip['pickup_longitude']\n",
     "   "
    ]
   },
