Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -448,7 +448,8 @@
     "    x = []\n",
     "    y = trip['pickup_latitude']\n",
     "    z = trip['pickup_longitude']\n",
-    "   "
+    "    x.append(y)\n",
+    "    x.append(z) "
    ]
   },
   {
