Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -526,12 +526,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-89-350887023d66>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-89-350887023d66>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: to_marker(location(trip)), trips)\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location(trip)), trips)"
+    "    return list(map(lambda trip: to_marker(location(trip)), trips))"
    ]
   },
   {
