Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,11 +446,8 @@
    "source": [
     "def location(trip):\n",
     "    x = []\n",
-    "    y = trip['pickup_latitude']\n",
-    "    z = trip['pickup_longitude']\n",
-    "    x.append(y)\n",
-    "    x.append(z) \n",
-    "    return x "
+    "    y = trip['pickup_latitude'], trip['pickup_longitude']}\n",
+    "    "
    ]
   },
   {
