Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -440,13 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    x = []\n",
-    "    y = trip['pickup_latitude'], trip['pickup_longitude']}\n",
+    "    return [trip['pickup_latitude'], trip['pickup_longitude']]\n",
     "    "
    ]
   },
